# k-degree-anonymity

./: README.md  pyproject.toml  pyrightconfig.json
datasets/: graph_friend_10000_10_100.csv  graph_friend_1000_10_100.csv  graph_friend_100_10_100.csv
k-degree/: k-degree.py
