[tool.poetry]
name = "k-degree"
version = "0.1.0"
description = ""
authors = ["fabifont <fabio.fontana@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
networkx = "^2.8.7"
plotly = "^5.10.0"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
pyright = "^1.1.276"
black = "^22.10.0"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
